# VLSMC

./: .gitignore  ANIM.ELF  CAT_TEST.ELF  CMakeLists.txt  DIRENT_T.ELF  DYNHELLO.ELF  DYNTEST.ELF  FILEIO.ELF  FILETST.ELF  FORKTST.ELF  FSDRIVER.ELF  GFXEDIT.ELF  HELLO.ELF  INIT.ELF  MALLOCT.ELF  MATHTEST.ELF  MEMTEST.ELF  PS2TEST.ELF  README.md  REX.xml  STACKBM.ELF  STDIOTST.ELF  STDIO_T.ELF  STDLIBT.ELF  STRTEST.ELF  SYSCALLT.ELF  TIME_CT.ELF  UARTDRV.SYS  VESATEST.ELF  all.asm  anim.asm  bochsrc.cfg  build.sh  build_iso.py  build_log.txt  cat.S  data.vmdk  disk.img  disk.vmdk  dynhello_dump.txt  (+22 more)
apps/: gfxedit.cpp
boot/: README.md  bootloader.asm  stage2.asm
data.vmdk.lck/: M07947.lck  M45308.lck
docs/: AHCI_DRIVER_REQUIREMENTS.md  APP_API_UNIX_REQUIREMENTS.md  APP_SDK.md  ARCHITECTURE.md  DRIVER_API_STABILIZATION.md  DRIVER_FAT32_REQUIREMENTS.md  FAT32_SPEC.md  FUTURE_VISION.md  LIBC_REQUIREMENTS.md  LIBC_SO_REQUIREMENTS.md  NETWORK_STACK_ROADMAP.md  PACKAGE_FORMAT.md  POSIX_PROCESS_REQUIREMENTS.md  PROJECT_PLAN.md  PROJECT_ROADMAP.md  REAL_HARDWARE_BOOT.md  REQUIREMENTS.md  REX.xml  SHELL.md  TECH_STACK.md  TOP10_CRITICAL_FIXES.md  USER_APP_GUIDE.md  VFS.md  libc_analysis.md  reXre36.md  release_notes.md  release_notes_0.1.1.md  user_heap_design.md
kernel/: CMakeLists.txt  linker.ld
kernel/include/: libc.h
kernel/include/kernel/: ahci.h  app_api.h  app_runtime.h  ata.h  bga.h  boot_info.h  console_driver.h  cow.h  disk.h  elf.h  elf_loader.h  event_bus.h  event_channel.h  fat16.h  filesystem.h  fs_driver.h  idt.h  input_manager.h  io_manager.h  ipc.h  kbd_driver.h  kernel.h  keyboard.h  kmalloc.h  logger.h  memory_manager.h  memory_validator.h  mouse.h  page_cache.h  pci.h  pic.h  pmm.h  process.h  rtc.h  scheduler.h  selftest.h  shell.h  shell_autocomplete.h  shell_history.h  shell_redirect.h  (+17 more)
kernel/src/: ahci.cpp  app_api.cpp  app_runtime.cpp  ata.cpp  bga.cpp  console_driver.cpp  cow.cpp  disk.cpp  elf_loader.cpp  event_bus.cpp  event_channel.cpp  fat16.cpp  filesystem.cpp  fs_driver.cpp  idt.cpp  input_manager.cpp  interrupts.asm  io_manager.cpp  ipc.cpp  kbd_driver.cpp  kernel.cpp  kernel_entry.asm  kernel_main.cpp  keyboard.cpp  kmalloc.cpp  libc.cpp  logger.cpp  memory_manager.cpp  memory_validator.cpp  mouse.cpp  page_cache.cpp  pci.cpp  pic.cpp  pmm.cpp  process.cpp  rtc.cpp  scheduler.cpp  selftest.cpp  shell.cpp  shell_autocomplete.cpp  (+18 more)
user/: anim.cpp  app_api.h  cat_test.cpp  crt0.asm  driver_api.h  dynhello.cpp  dyntest.cpp  fileio.cpp  forktest.cpp  fs_driver.cpp  heap_test.cpp  hello.c  hello.cpp  malloctest.cpp  mathtest.cpp  memtest.cpp  ps2_driver.cpp  ps2_driver.h  ps2_test.cpp  stack_bomb.cpp  stdio_test.cpp  stdlib_test.cpp  strtest.cpp  syscalls.h  uart_driver.cpp  user.ld  vesa_driver.h
user/ldso/: ldso.cpp  ldso.ld  ldso_entry.asm
user/libc/: libc.ld
user/libc/include/: assert.h  ctype.h  dirent.h  errno.h  float.h  limits.h  malloc.h  math.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h
user/libc/include/sys/: mutex.h  syscall.h
user/libc/src/: ctype.cpp  cxx.cpp  dirent.cpp  errno.cpp  init.cpp  malloc.cpp  math.cpp  stdio.cpp  stdlib.cpp  string.cpp  syscall.cpp  time.cpp
user/libtest/: libtest.cpp  libtest.ld
user/tests/: cat_test.cpp  dirent_test.cpp  filetest.cpp  gfxedit.cpp  heap_test.cpp  malloctest.cpp  memtest.cpp  stdio_adv_test.cpp  syscall_test.cpp  tetris.cpp  time_ctype_test.cpp  vesa_test.cpp
